--- a/Enums/Enums.csproj
+++ b/Enums/Enums.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ComparisonType.cs" />
     <Compile Include="CreatedBy.cs" />
     <Compile Include="NamedEntityType.cs" />
+    <Compile Include="PartOfSpeechType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepresentMode.cs" />
     <Compile Include="TokenType.cs" />
