Split calculation of match of sentences into structure match and content match parts

--- a/NotenizerObjects/NotenizerObjects.csproj
+++ b/NotenizerObjects/NotenizerObjects.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompressedDependencies.cs" />
+    <Compile Include="Match.cs" />
     <Compile Include="NamedEntity.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="NotenizerAndParserRule.cs" />
