--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -80,6 +80,12 @@
     <Compile Include="FormEditNote.Designer.cs">
       <DependentUpon>FormEditNote.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormOpenLink.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormOpenLink.Designer.cs">
+      <DependentUpon>FormOpenLink.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTextInputer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormEditNote.resx">
       <DependentUpon>FormEditNote.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormOpenLink.resx">
+      <DependentUpon>FormOpenLink.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTextInputer.resx">
       <DependentUpon>FormTextInputer.cs</DependentUpon>
@@ -150,6 +159,10 @@
     <ProjectReference Include="..\Parsers\Parsers.csproj">
       <Project>{26543069-4b17-4652-ac7c-01202a8bf751}</Project>
       <Name>Parsers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{768f9185-c372-4a22-acae-2c01101d598d}</Project>
+      <Name>Services</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
