--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -77,6 +77,10 @@
       <Project>{a935e0ec-5e82-46b1-a209-405d11faa30c}</Project>
       <Name>Extensions</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{654FBC57-770B-473A-AE1F-B75122886EDD}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NotenizerObjects\NotenizerObjects.csproj">
       <Project>{6fdbbec7-9acc-44ea-aaf3-86d771ee5f46}</Project>
       <Name>NotenizerObjects</Name>
