--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -34,6 +34,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>ExternalDll\IKVM.OpenJDK.Core.dll</HintPath>
     </Reference>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\Notenizer\ExternalDll\MongoDB.Bson.dll</HintPath>
+    </Reference>
     <Reference Include="stanford-corenlp-3.5.2, Version=3.5.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>ExternalDll\stanford-corenlp-3.5.2.dll</HintPath>
