--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +58,7 @@
   <ItemGroup>
     <Compile Include="DBServices\DocumentCreator.cs" />
     <Compile Include="DBServices\DocumentParser.cs" />
+    <Compile Include="FileServices\FileManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebServices\WebParser.cs" />
     <Compile Include="WebServices\WikiParser.cs" />
