Analysis on current database

--- a/Notenizer/Notenizer.csproj
+++ b/Notenizer/Notenizer.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>nsNotenizer</RootNamespace>
-    <AssemblyName>Notenizer</AssemblyName>
+    <AssemblyName>NotenizerLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -149,6 +149,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analyzator.cs" />
     <Compile Include="Notenizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
