--- a/CLI/CLI.csproj
+++ b/CLI/CLI.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>nsCLI</RootNamespace>
-    <AssemblyName>CLI</AssemblyName>
+    <AssemblyName>Notenizer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
