--- a/Notenizer/Notenizer.csproj
+++ b/Notenizer/Notenizer.csproj
@@ -154,8 +154,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ExternalDll\IKVM.OpenJDK.Core.dll" />
-    <Content Include="ExternalDll\stanford-corenlp-3.5.2.dll" />
+    <Content Include="ExternalDll\IKVM.OpenJDK.Core.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ExternalDll\stanford-corenlp-3.5.2.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="stanford-corenlp-3.5.2-models\edu\stanford\nlp\dcoref\coref.properties">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
